--- a/master/mystyle.css
+++ b/master/mystyle.css
@@ -35,6 +35,10 @@ body {
   }
 }
 
+body header {
+  padding: 20px;
+}
+
 body header nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,5 +66,61 @@ body header nav div span {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+body header nav div span span:first-child {
+  background-color: #333;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 2px;
+}
+
+body header nav div span span:nth-child(2) {
+  background-color: #333;
+  margin-bottom: 5px;
+  width: 60%;
+  height: 2px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+body header nav div span span:last-child {
+  background-color: #333;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 2px;
+}
+
+body header nav div span :hover span:nth-child(2) {
+  width: 100px;
+}
+
+body header nav div :hover span:nth-child(2) {
+  width: 100%;
+}
+
+body header nav div ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: #f6f6f6;
+  position: absolute;
+  right: 0;
+  min-width: 200px;
+  top: calc(100% + 51px);
+  /*display: none;*/
+}
+
+body header nav div ul::before {
+  content: "";
+  border-width: 10px;
+  border-style: solid;
+  background-color: transparent transparent #f6f6f6 transparent;
+  position: absolute;
+  right: 5px;
+  top: -5px;
 }
 /*# sourceMappingURL=mystyle.css.map */
