--- a/master/mystyle.scss
+++ b/master/mystyle.scss
@@ -29,6 +29,8 @@ body {
     /*End global rules */
     /*start header*/
     header {
+        padding: 20px;
+
         nav {
             display: flex;
             justify-content: space-between;
@@ -45,7 +47,65 @@ body {
                     width: 30px;
                     display: flex;
                     flex-wrap: wrap;
+                    justify-content: flex-end;
+
+                    span:first-child {
+                        background-color: #333;
+                        margin-bottom: 5px;
+                        width: 100%;
+                        height: 2px;
+                    }
+
+                    span:nth-child(2) {
+                        background-color: #333;
+                        margin-bottom: 5px;
+                        width: 60%;
+                        height: 2px;
+                        transition: .3s;
+
+                    }
+
+                    span:last-child {
+                        background-color: #333;
+                        margin-bottom: 5px;
+                        width: 100%;
+                        height: 2px;
+                    }
+
+                    :hover span:nth-child(2) {
+                        width: 100px;
+                    }
+
                 }
+
+                :hover span:nth-child(2) {
+                    width: 100%;
+
+                }
+
+                ul {
+                    list-style: none;
+                    margin: 0;
+                    padding: 0;
+                    background-color: #f6f6f6;
+                    position: absolute;
+                    right: 0;
+                    min-width: 200px;
+                    top: calc(100% + 51px);
+                    /*display: none;*/
+                }
+
+                ul::before {
+                    content: "";
+                    border-width: 10px;
+                    border-style: solid;
+                    background-color: transparent transparent #f6f6f6 transparent;
+                    position: absolute;
+                    right: 5px;
+                    top: -5px;
+                }
+
+
             }
         }
     }
